all html updated with 3 langs

--- a/tigahelp/templates/tigahelp/help_ca.html
+++ b/tigahelp/templates/tigahelp/help_ca.html
@@ -2,52 +2,35 @@
 {% load staticfiles %}
 
 {% block page_title %}
-    Ajuda
+    Mosquito Alert Ajuda
 {% endblock %}
 
 
 {% block content %}
 
     <h1>PARTICIPA</h1>
-    Participa en l'estudi i seguiment del mosquit tigre a Espanya, enviant dades de llocs de cria i troballes d'adult de
-    mosquit tigre. Informa't de les últimes novetats i aprèn a combatre el mosquit tigre a casa teva.
+Participa en l'estudi i seguiment a temps real del mosquit tigre (<i>Aedes albopictus</i>) i del mosuqit de la febre groga (<i>Aedes aegypti</i>), enviant troballes d’aquestes dues espècies i dels seus llocs de cria. Informa't de les últimes novetats i aprèn a combatre aquestes espècies a casa teva.
 
-    <h2>Familiaritza't amb el mosquit tigre</h2>
-    Aprèn a reconèixer el mosquit tigre (assegura't que no el confons amb altres mosquits). Familiaritza't amb el seu
-    cicle de vida i amb els llocs on cria. L'App i la web del projecte AtrapaelTigre.com contenen tota la informació
-    necessària perquè les teves dades siguin de qualitat.
+    <h2>Familiaritza't amb <i>Ae. albopictus</i> i <i>Ae. aegypti</i></h2>
+Aprèn a reconèixer aquestes dues espècies (assegura't que no les confons amb altres mosquits). Familiaritza't amb el seu cicle de vida i amb els llocs on cria. L'App i la web del projecte <a  href="mosquitoalert.com">mosquitoalert.com</a> contenen tota la informació necessària perquè les teves dades siguin de qualitat.
 
     <h2>Participa compartint dades</h2>
-    Utilitza els botons “ENVIA” per enviar informes de nous llocs de cria en espais públics i de troballes de mosquit
-    tigre. Trobaràs informació detallada clicant l'icona (i).
+Utilitza els botons “ENVIA” per enviar informes de nous llocs de cria en espais públics i de troballes de mosquit tigre o del mosquit de la febre groga. Trobaràs informació detallada clicant l'icona (i).
 
     <h2>Mantén les teves dades actualitzades</h2>
-    Utilitza el botó “EL MEU MAPA” per veure i controlar les teves dades, editar-les si les vols actualitzar o corregir
-    i eliminar-les si creus que són errònies.
+Utilitza el botó “EL MEU MAPA” per veure i controlar les teves dades, editar-les si les vols actualitzar o corregir i eliminar-les si creus que són errònies.
 
     <h2>Participa en missions</h2>
-    Si utilitzes la versió Android de Tigatrapp, participa en missions especials si t'apareix la icona del mosquit tigre al teu telèfon. En qualsevol moment podràs
-    realitzar la missió, deixar-la per més tard, o eliminar-la si no vols participar-hi. Consulta les missions pendents
-    al menú principal.
+Si utilitzes la versió Android de Mosquito Alert, participa en missions especials si t'apareix una icona especial al teu telèfon. En qualsevol moment podràs realitzar la missió, deixar-la per més tard, o eliminar-la si no vols participar-hi. Consulta les missions pendents al menú principal.
 
     <h2>Explora altres opcions</h2>
-    Explora el botó de configuració a cada pantalla per accedir a opcions extres. Canvia el mapa base, comparteix l'App
-    o consulta les últimes notícies del projecte AtrapaelTigre.com.
-
+Explora el botó de configuració a cada pantalla per accedir a opcions extres. Canvia el mapa base, comparteix l'App o consulta les últimes notícies del projecte <a  href="mosquitoalert.com">mosquitoalert.com</a>.
 
     <h1>DESTÍ DE LES TEVES DADES</h1>
-    Les teves dades s'enviaran al centre de recerca que coordina AtrapaelTigre.com, el Centre d'Estudis Avançats de
-    Blanes del Consell Superior d'Investigacions Científiques (CEAB-CSIC). Les dades s’utilitzen per millorar el coneixement de la dispersió del mosquit tigre i de les ciències ciutadanes i poden ser compartides amb terceres parts o el públic general.
-
-    Tigatrapp recull també dades de la posició aproximada del teu telèfon mòbil en intervals de temps aleatoris. Aquesta informació s’utilitza per conèixer i generar un mapa de les zones explorades pels usuaris de Tigatrapp i per millorar el coneixement sobre les vies de dispersió del mosquit tigre. Aquestes dades de posició són aproximades, i es recullen arrodonint la teva posició real als 0.05 graus de latitud i longitud més propers. Aquest mètode fa que sigui possible saber que estaves en una àrea aproximadament de la mida d’una ciutat petita com Blanes, però fa que sigui impossible saber la teva posició exacta dins d’aquesta àrea. Les localitzacions estan unides només al teu identificador, generat de manera aleatòria, però a cap informació que permeti la teva identificació personal.
-
-    Part de les teves dades enviades es publiquen de manera automàtica al mapa web del mosquit tigre a la web del
-    projecte AtrapaelTigre.com. En qualsevol moment pots eliminar, editar i actualitzar les dades publicades al mapa web, des del botó “EL
-    MEU MAPA”, seleccionant un informe.
+Les teves dades s'enviaran al centre de recerca que coordina Mosquito Alert, el Centre d'Estudis Avançats de Blanes del Consell Superior d'Investigacions Científiques (CEAB-CSIC). Les dades s’utilitzen per millorar el coneixement de la dispersió del mosquit tigre i del mosquit de la febre groga i de les ciències ciutadanes i poden ser compartides amb terceres parts o el públic general. Mosquito Alert recull també dades de la posició aproximada del teu telèfon mòbil en intervals de temps aleatoris. Aquesta informació s’utilitza per conèixer i generar un mapa de les zones explorades pels usuaris de Mosquito Alert i per millorar el coneixement sobre les vies de dispersió del mosquit tigre i del mosquit de la febre groga. Aquestes dades de posició són aproximades, i es recullen arrodonint la teva posició real als 0.05 graus de latitud i longitud més propers. Aquest mètode fa que sigui possible saber que estaves en una àrea aproximadament de la mida d’una ciutat petita com Blanes, però fa que sigui impossible saber la teva posició exacta dins d’aquesta àrea. Les localitzacions estan unides només al teu identificador, generat de manera aleatòria, però a cap informació que permeti la teva identificació personal. Part de les teves dades enviades es publiquen de manera automàtica al mapa web a la web del projecte <a href="mosquitoalert.com">mosquitoalert.com</a>. En qualsevol moment pots eliminar, editar i actualitzar les dades publicades al mapa web, des del botó “EL MEU MAPA”, seleccionant un informe.
 
     <h1>CONSULTA SI TENS MÉS DUBTES</h1>
-    Consulta la <a href="http://www.atrapaeltigre.com">pàgina web</a> o escriu a
-    <a href="mailto:info@atrapaeltigre.com">info@atrapaeltigre.com</a>.
+Consulta la pàgina web o escriu a <a href="mailto:info@mosquitoalert.com">info@mosquitoalert.com</a>.
 
 {% endblock %}
 
