--- a/tigahelp/templates/tigahelp/help_en.html
+++ b/tigahelp/templates/tigahelp/help_en.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block page_title %}
-    Tigatrapp Help
+    Mosquito Alert Help
 {% endblock %}
 
 
@@ -10,50 +10,29 @@
 
 <h1><b>PARTICIPATE</b></h1>
 
-<p>Participate in the study and monitoring of tiger mosquitoes in Spain by sending reports on breeding sites and adult
-    tiger mosquito sightings. Get the latest news and learn to combat tiger mosquitoes in your home.</p>
+<p>Participate in the study and real-time monitoring of tiger mosquitoes (<i>Aedes albopictus</i>) and yellow fever mosquitoes (<i>Aedes aegypti</i>) by sending reports of possible sightings of these species and their breeding sites. Stay informed and learn to combat these mosquitoes in and around your home.</p>
 
-<h2><b>Learn about the tiger mosquito</b></h2>
-Learn to recognize the tiger mosquito and make sure not to confuse it with other mosquitoes. Learn about the mosquito's
-life cycle and breeding places. The app and the project website (AtrapaelTigre.com) contain all the information
-necessary for gathering quality data.
+<h2>Learn about Ae. albopictus and Ae. aegypti</h2>
+
+Learn to recognize these two species (and make sure not to confuse them with other mosquitoes). Learn about their life cycle and breeding sites. The app and the <a href="mosquitoalert.com">mosquitoalert.com</a> website contain all the information necessary for gathering quality data.
 
 <h2>Begin sharing data </h2>
-Use the "REPORT" buttons on the main screen to send reports on breeding sites in public spaces and sightings of adult
-tiger mosquitoes. You'll find detailed information by clicking the information (i) icons.
+Use the "REPORT" buttons on the main screen to send reports on breeding sites in public spaces and sightings of adult tiger and yellow fever mosquitoes. You'll find detailed information by clicking the (i) icons.
 
 <h2>Keep your information updated </h2>
 Use the "MY MAP" button to view your reports and edit them if necessary to update or correct information.
 
 <h2>Volunteer for missions</h2>
-If you are using the Android version of Tigatrapp, you will be notified of special missions by an icon appearing on your
-device's status bar. You can complete the mission at any time, postpone it for later, or delete it from your device.
-Check pending missions from the options menu on the main screen.
+If you are using the Android version of Mosquito Alert, you will be notified of special missions by an icon appearing on your device's status bar. You can complete the mission at any time, postpone it for later, or delete it from your device. Check pending missions from the options menu on the main screen.
 
 <h2>Explore other options</h2>
-Explore the options menus on each screen to access additional features. Change the base map style, share the app with
-friends, or check the latest news from AtrapaelTigre.com.
+Explore the options menus on each screen to access additional features. Change the base map style, share the app with friends, or check the latest news from <a href="mosquitoalert.com">mosquitoalert.com</a>.
 
 
 <h1>YOUR DATA</h1>
-The information you submit is sent to the Centre for Advanced Studies of Blanes (CEAB-CSIC), which is coordinating the
-AtrapaelTigre project. The data will be used to learn more about the spread of tiger mosquitoes and may be
-shared with third parties or the public.
-
-Tigatrapp also collects coarse information on your location at random times throughout the day in order to generate a
-map of the areas being monitored by Tigatrapp users, and to learn about the routes along which tiger mosquitoes may be
-spreading. These locations are masked by rounding your actual location to the nearest 0.05 degrees latitude and
-longitude, making it possible to know that you were in an area roughly the size of a small city like Blanes, but
-impossible to know where you were in that area. The locations are linked only to your randomly-generated user ID, and no
-personally-identifying information is collected.
-
-Parts of the data you share will be automatically published on the web map at AtrapaelTigre.com. At any time you can
-delete, edit and update the data published on this map from your phone by clicking the "MY MAP" button on the main
-    screen and
-selecting a report.
+The information you submit goes to the Centre for Advanced Studies of Blanes (CEAB-CSIC), which is coordinating the Mosquito Alert project. The data will be used to learn more about the spread of tiger and yellow fever mosquitoes and may be shared with third parties or the public. Mosquito Alert also collects coarse information on your location at random times throughout the day in order to generate a map of the areas being monitored by Mosquito Alert users, and to learn about the routes along which tiger and yellow fever mosquitoes may be spreading. These locations are masked by rounding your actual location to the nearest 0.05 degrees latitude and longitude, making it possible to know that you were in an area roughly the size of a small city like Blanes, but impossible to know where you were in that area. The locations are linked only to your randomly-generated user ID, and no personally-identifying information is collected. Parts of the data you share will be automatically published on the web map at <a href="mosquitoalert.com">mosquitoalert.com</a>. At any time you can delete, edit and update the data published on this map from your phone by clicking the "MY MAP" button on the main screen and selecting a report.
 
 <h1>ADDITIONAL QUESTIONS</h1>
-Check the <a href="http://www.atrapaeltigre.com">website</a> or contact <a href="mailto:info@atrapaeltigre.com">info@atrapaeltigre.com</a>
-for more information.
+Check the website or contact <a href="mailto:info@mosquitoalert.com">info@mosquitoalert.com</a> for more information.
 
 {% endblock %}
