--- a/tigahelp/templates/tigahelp/help_es.html
+++ b/tigahelp/templates/tigahelp/help_es.html
@@ -2,20 +2,17 @@
 {% load staticfiles %}
 
 {% block page_title %}
-    Ayuda
+    Mosquito Alert Ayuda
 {% endblock %}
 
 
 {% block content %}
 
-
-
-
 <h1>PARTICIPA</h1>
 Participa en el estudio y seguimiento a tiempo real del mosquito tigre (<i>Aedes albopictus</i>) y del mosquito de la fiebre amarilla (<i>Aedes aegypti</i>), enviando posibles hallazgos de estas dos especies y de sus lugares de cría. Infórmate de las últimas novedades y aprende a combatir estas dos especies en tu casa.
 
 <h2>Familiarízate con <i>Ae. albopictus</i> y <i>Ae. aegypti</i></h2>
-Aprende a reconocer estas dos especies (asegúrate de que no las confundes con otros mosquitos). Familiarízate con su ciclo de vida y con sus lugares de cría. La App y la web del proyecto MosquitoAlert.com contienen toda la información necesaria para que tus datos sean de calidad.
+Aprende a reconocer estas dos especies (asegúrate de que no las confundes con otros mosquitos). Familiarízate con su ciclo de vida y con sus lugares de cría. La App y la web del proyecto <a href="mosquitoalert.com">mosquitoalert.com</a> contienen toda la información necesaria para que tus datos sean de calidad.
 
 <h2>Participa compartiendo datos</h2>
 Utiliza los botones “ENVIA” para enviar informes de nuevos lugares de cría en espacios públicos y de hallazgos de mosquito tigre o del mosquito de la fiebre amarilla. Encontrarás información detallada clicando el icono (i).
@@ -31,13 +28,9 @@ Explora el botón de configuración en cada pantalla para acceder a opciones ext
 
 
 <h1>DESTINO DE TUS DATOS</h1>
-    Tus datos se enviarán al centro de investigación que coordina <a href="mosquitoalert.com">Mosquito Alert</a>, el Centro de Estudios Avanzados de Blanes del Consejo Superior de Investigaciones Científicas (CEAB-CSIC). Los datos se utilizan para mejorar el conocimiento de la dispersión del mosquito tigre y del mosquito de la fiebre amarilla y de las ciencias ciudadanas y pueden ser compartidos con terceras partes o el público general.
-
-Mosquito Alert recoge también datos de la posición aproximada de tu teléfono móvil en intervalos de tiempo aleatorios. Esta información se utiliza para conocer y generar un mapa de las zonas exploradas por los usuarios de Mosquito Alert y para mejorar el conocimiento sobre las vías de dispersión de estas dos especies. Estos datos de posición son aproximados, y se recogen redondeando tu posición real a los 0.05 grados de latitud y longitud más cercanos. Este método hace que sea posible saber que estabas en un área aproximadamente del tamaño de una ciudad pequeña como Blanes, pero hace que sea imposible saber tu posición exacta dentro de esta área. Las localizaciones están unidas sólo a tu identificador, generado de manera aleatoria, pero a ninguna información que permita tu identificación personal.
-
-    Parte de tus datos enviados se publican de manera automática en el mapa web del mosquito tigre en la web del proyecto MosquitoAlert.com. En cualquier momento puedes eliminar, editar y actualizar los datos publicados en el mapa web, desde el botón “MI MAPA”, seleccionando un informe.
+Tus datos se enviarán al centro de investigación que coordina Mosquito Alert, el Centro de Estudios Avanzados de Blanes del Consejo Superior de Investigaciones Científicas (CEAB-CSIC). Los datos se utilizan para mejorar el conocimiento de la dispersión del mosquito tigre y del mosquito de la fiebre amarilla y de las ciencias ciudadanas y pueden ser compartidos con terceras partes o el público general. Mosquito Alert recoge también datos de la posición aproximada de tu teléfono móvil en intervalos de tiempo aleatorios. Esta información se utiliza para conocer y generar un mapa de las zonas exploradas por los usuarios de Mosquito Alert y para mejorar el conocimiento sobre las vías de dispersión de estas dos especies. Estos datos de posición son aproximados, y se recogen redondeando tu posición real a los 0.05 grados de latitud y longitud más cercanos. Este método hace que sea posible saber que estabas en un área aproximadamente del tamaño de una ciudad pequeña como Blanes, pero hace que sea imposible saber tu posición exacta dentro de esta área. Las localizaciones están unidas sólo a tu identificador, generado de manera aleatoria, pero a ninguna información que permita tu identificación personal. Parte de tus datos enviados se publican de manera automática en el mapa web del proyecto <a href="mosquitoalert.com">mosquitoalert.com</a>. En cualquier momento puedes eliminar, editar y actualizar los datos publicados en el mapa web, desde el botón “MI MAPA”, seleccionando un informe.
 
 <h1>CONSULTA SI TIENES MÁS DUDAS</h1>
-    Si tienes dudas, consulta la página web o escribe a <a href="mailto:info@mosquitoalert.com">info@mosquitoalert.com</a>.
+Si tienes dudas, consulta la página web o escribe a <a href="mailto:info@mosquitoalert.com">info@mosquitoalert.com</a>s.
 
 {% endblock %}
