--- a/tigahelp/templates/tigahelp/license_ca.html
+++ b/tigahelp/templates/tigahelp/license_ca.html
@@ -11,14 +11,7 @@
         <h1>Mosquito Alert</h1>
     </div>
 
-    <p>Mosquito Alert (anteriorment Tigatrapp) és una aplicació que busca aprofitar el gran potencial de la ciutadania per a col·laborar en la recerca
-        del mosquit tigre, gràcies a l'ús de les noves tecnologies. És, per tant, un exemple del potencial de les
-        ciències ciutadanes. L'aplicació ha sigut desenvolupada pel grup de recerca <a href="http://movelab.net">Movement
-            Ecology Lab</a> del Centre d'Estudis Avançats de Blanes (CEAB-CSIC). El codi font està en part basat en codi
-        de l'aplicació "<a href="http://activityspaceproject.com">Space Mapper</a>" (desenvolupada per John R.B.
-        Palmer), i codi de "<a href="http://pmp.princeton.edu/">The Human Mobility Project</a>" (Chang Y. Chung,
-        Kathleen Li i Necati E. Ozgencil). El codi font de Tigatrapp està disponible al grup de recerca Movement Ecology
-        Lab.</p>
+    <p>Mosquito Alert (anteriorment Tigatrapp) és una aplicació que busca aprofitar el gran potencial de la ciutadania per a col·laborar en la recerca del mosquit tigre i del mosuqit de la febre groga, gràcies a l'ús de les noves tecnologies. És, per tant, un exemple del potencial de les ciències ciutadanes. L'aplicació ha sigut desenvolupada pel grup de recerca <a href="http://movelab.net">ICREA Movement Ecology Lab</a> del Centre d'Estudis Avançats de Blanes (CEAB-CSIC). El codi font està en part basat en codi de l'aplicació "<a href="http://activityspaceproject.com">Space Mapper</a>" (desenvolupada per John R.B. Palmer), i codi de "<a href="http://pmp.princeton.edu/">The Human Mobility Project</a>" (Chang Y. Chung, Kathleen Li i Necati E. Ozgencil). El codi font de Tigatrapp està disponible al grup de recerca Movement Ecology Lab.</p>
 
     <p>Copyright &#169; 2013-2016 John R.B. Palmer, Aitana Oltra, Joan Garriga i Frederic Bartumeus</p>
 
