--- a/tigahelp/templates/tigahelp/privacy_ca.html
+++ b/tigahelp/templates/tigahelp/privacy_ca.html
@@ -38,8 +38,8 @@
             ubicació des del dispositiu. Així, és impossible determinar la ubicació real, dins d'una àrea de 0,05 graus
             de latitud per 0,05 graus de longitud (aproximadament la mida d'una ciutat petita com Blanes ).
         </li>
-        <li>Informació sobre el model de telèfon, bateria, configuració d'idioma, i la instal·lació de Tigatrapp (és a
-            dir, la versió instal·lada de Tigatrapp i el sistema operatiu i versió en què s'instal·la). Aquesta
+        <li>Informació sobre el model de telèfon, bateria, configuració d'idioma, i la instal·lació de Mosquito Alert (és a
+            dir, la versió instal·lada de Mosquito Alert i el sistema operatiu i versió en què s'instal·la). Aquesta
             informació s'utilitza per ajudar l'equip d'investigació a millorar l'aplicació.
         </li>
     </ul>
