--- a/tigahelp/templates/tigahelp/privacy_en.html
+++ b/tigahelp/templates/tigahelp/privacy_en.html
@@ -42,8 +42,8 @@ inconsistent with the Mosquito Alert terms of use.</p>
         learn more about the routes along which tiger mosquitoes may be spreading. In order to make it impossible to determine precise location information from this data, the latitudes and longitudes are rounded down to the nearest 0.05 degrees before the location is transmitted from the volunteer's device. This makes it impossible to determine where the actual location was within a 0.05 degree latitude by 0.05 degree longitude area (the size of a small city like Blanes).
     </li>
 
-    <li>Information about the phone model, battery power, language settings, and Tigatrapp installation (i.e. which
-        version of Tigatrapp is installed and what operating system and operating system version it is installed on).
+    <li>Information about the phone model, battery power, language settings, and Mosquito Alert installation (i.e. which
+        version of Mosquito Alert is installed and what operating system and operating system version it is installed on).
         This
         information
         is used to help the research team improve the application.
