--- a/tigahelp/templates/tigahelp/privacy_es.html
+++ b/tigahelp/templates/tigahelp/privacy_es.html
@@ -40,8 +40,8 @@
             un área de 0,05 grados de latitud por 0,05 grados de longitud (aproximadamente el tamaño de una ciudad
             pequeña como Blanes).
         </li>
-        <li>Información sobre el modelo de teléfono, batería, configuración de idioma, y la instalación de Tigatrapp
-            (esto es, la versión instalada de Tigatrapp y el sistema operativo y versión en el que se instala). Esta
+        <li>Información sobre el modelo de teléfono, batería, configuración de idioma, y la instalación de Mosquito Alert
+            (esto es, la versión instalada de Mosquito Alert y el sistema operativo y versión en el que se instala). Esta
             información se utiliza para ayudar al equipo de investigación a mejorar la aplicación.
         </li>
     </ul>
