--- a/tigahelp/templates/tigahelp/terms_ca.html
+++ b/tigahelp/templates/tigahelp/terms_ca.html
@@ -17,8 +17,8 @@
         projecte també hi participa el Consell Superior d'Investigacions Científiques i la Universitat de Múrcia.
     </p>
 
-    <p>El projecte des basa en la recollida de dades sobre el mosquit tigre a Espanya per parts dels ciutadans&mdash;ciutadans
-        científics. Els ciutadans poden participar compartint dades a través de les diferents aplicacions Tigatrapp per
+    <p>El projecte des basa en la recollida de dades sobre el mosquit tigre i el mosquit de la febre groga per parts dels ciutadans&mdash;ciutadans
+        científics. Els ciutadans poden participar compartint dades a través de les diferents aplicacions Mosquito Alert per
         a dispositius mòbils. Per a això, cal que siguis major d'edat o que participis sota la supervisió d'un adult i
         que estiguis d'acord amb la política de privacitat de Mosquito Alert, així com amb els següents termes:</p>
 
