--- a/tigahelp/templates/tigahelp/terms_es.html
+++ b/tigahelp/templates/tigahelp/terms_es.html
@@ -19,8 +19,8 @@
         de Murcia.</p>
 
     <p>El proyecto depende de la recogida de datos por parte de la ciudadanía&mdash;ciudadanos científicos&mdash;sobre
-        el mosquito tigre en España. Los ciudadanos participan compartiendo datos a través de las distintas aplicaciones
-        Tigatrapp para dispositivos móviles. Para ello, será necesario ser mayor de edad o participar bajo la
+        el mosquito tigre y el mosquito de la fiebre amarilla. Los ciudadanos participan compartiendo datos a través de las distintas aplicaciones
+        Mosquito Alert para dispositivos móviles. Para ello, será necesario ser mayor de edad o participar bajo la
         supervisión de un adulto y estar de acuerdo con la política de privacidad de Mosquito Alert, así como con los
         siguientes términos: </p>
 
