--- a/tigahelp/templates/tigahelp/about_en.html
+++ b/tigahelp/templates/tigahelp/about_en.html
@@ -17,7 +17,7 @@
     <p>The project is coordinated by the 
     <a href="http://www.movelab.net/">ICREA Movement Ecology Laboratory</a> at <a href="http://www.ceab.csic.es/">CEAB-CSIC</a> and <a href="http://www.creaf.cat">CREAF</a>.</p>
 
-    <p>The project has been driven by “la Caixa” Banking Foundation. </p>
+    <p>The project is funded by the “la Caixa” Banking Foundation. </p>
 
    <p class='centeredImage'>
        <img style='max-width: 100%; height: auto;' src
