--- a/tigahelp/templates/tigahelp/license_en.html
+++ b/tigahelp/templates/tigahelp/license_en.html
@@ -12,9 +12,9 @@
 </div>
 
 <p>Mosquito Alert (formerly Tigatrapp) is an application that harnesses the power of citizen scientists and new technologies to
-investigate the spread of Tiger Mosquitoes in Spain. 
+investigate the spread of tiger mosquitoes and yellow fever mosquitoes.
 The application was developed by the 
- <a href="http://movelab.net">Movement Ecology Laboratory</a> of the Center for Advanced Studies of Blanes (CEAB-CSIC).
+ <a href="http://movelab.net">ICREA Movement Ecology Laboratory</a>at the Center for Advanced Studies of Blanes (CEAB-CSIC).
   The code is drawn in part from <a href="http://activityspaceproject.com">Space Mapper</a> (John R.B. Palmer), and the <a href="http://pmp.princeton.edu/">Human Mobility Project</a> 
  (Chang Y. Chung, Kathleen Li and Necati E. Ozgencil). 
  The Tigatrapp code is freely available from the Movement Ecology Lab.</p>
