--- a/tigahelp/templates/tigahelp/policies_en.html
+++ b/tigahelp/templates/tigahelp/policies_en.html
@@ -6,7 +6,7 @@
 <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-    <title>Tigatrapp Policies</title>
+    <title>Policies</title>
 
     <link rel="stylesheet" href={% static "tigahelp/pure-min.css" %}>
 
