--- a/tigahelp/templates/tigahelp/terms_en.html
+++ b/tigahelp/templates/tigahelp/terms_en.html
@@ -15,7 +15,7 @@
 <p>Mosquito Alert is a citizen science project being implemented by the ICREA-Movement Ecology Laboratory at the
     Centre for Advanced Studies of Blanes (CEAB-CSIC) in cooperation with the Spanish National Research Council and the University of Murcia.
 
-<p>The project relies on members of the public&mdash;citizen scientists&mdash;to collect data on the spread of tiger mosquitoes in Spain. You can participate by sharing data at Mosquito Alert.com or through any of the Tigatrapp applications for mobile devices. To do so, you must be an adult or supervised by an adult and you must agree to the Mosquito Alert privacy policy as well as the following terms:
+<p>The project relies on members of the public&mdash;citizen scientists&mdash;to collect data on the spread of tiger mosquitoes and yellow fever mosquitoes. You can participate by sharing data through any of the Mosquito Alert applications for mobile devices. To do so, you must be an adult or supervised by an adult and you must agree to the Mosquito Alert privacy policy as well as the following terms:
 <ol>
    <li>By sharing data with the Mosquito Alert project, you grant the members of the research team a perpetual, royalty-free, non-exclusive, sub-licensable license to: use, reproduce, modify, adapt, publish, translate, create derivative works from, distribute, and exercise all copyright and publicity rights with respect to your contribution worldwide and/or to incorporate your contribution in other works in any media now known or later developed for the full term of any rights that may exist in your contribution.</li>
 
