--- a/tigahelp/templates/tigahelp/help_en.html
+++ b/tigahelp/templates/tigahelp/help_en.html
@@ -14,7 +14,7 @@
 
 <h2>Learn about Ae. albopictus and Ae. aegypti</h2>
 
-Learn to recognize these two species (and make sure not to confuse them with other mosquitoes). Learn about their life cycle and breeding sites. The app and the <a href="mosquitoalert.com">mosquitoalert.com</a> website contain all the information necessary for gathering quality data.
+Learn to recognize these two species (and make sure not to confuse them with other mosquitoes). Learn about their life cycle and breeding sites. The app and the <a href="http://mosquitoalert.com">mosquitoalert.com</a> website contain all the information necessary for gathering quality data.
 
 <h2>Begin sharing data </h2>
 Use the "REPORT" buttons on the main screen to send reports on breeding sites in public spaces and sightings of adult tiger and yellow fever mosquitoes. You'll find detailed information by clicking the (i) icons.
@@ -26,11 +26,11 @@ Use the "MY MAP" button to view your reports and edit them if necessary to updat
 If you are using the Android version of Mosquito Alert, you will be notified of special missions by an icon appearing on your device's status bar. You can complete the mission at any time, postpone it for later, or delete it from your device. Check pending missions from the options menu on the main screen.
 
 <h2>Explore other options</h2>
-Explore the options menus on each screen to access additional features. Change the base map style, share the app with friends, or check the latest news from <a href="mosquitoalert.com">mosquitoalert.com</a>.
+Explore the options menus on each screen to access additional features. Change the base map style, share the app with friends, or check the latest news from <a href="http://mosquitoalert.com">mosquitoalert.com</a>.
 
 
 <h1>YOUR DATA</h1>
-The information you submit goes to the Centre for Advanced Studies of Blanes (CEAB-CSIC), which is coordinating the Mosquito Alert project. The data will be used to learn more about the spread of tiger and yellow fever mosquitoes and may be shared with third parties or the public. Mosquito Alert also collects coarse information on your location at random times throughout the day in order to generate a map of the areas being monitored by Mosquito Alert users, and to learn about the routes along which tiger and yellow fever mosquitoes may be spreading. These locations are masked by rounding your actual location to the nearest 0.05 degrees latitude and longitude, making it possible to know that you were in an area roughly the size of a small city like Blanes, but impossible to know where you were in that area. The locations are linked only to your randomly-generated user ID, and no personally-identifying information is collected. Parts of the data you share will be automatically published on the web map at <a href="mosquitoalert.com">mosquitoalert.com</a>. At any time you can delete, edit and update the data published on this map from your phone by clicking the "MY MAP" button on the main screen and selecting a report.
+The information you submit goes to the Centre for Advanced Studies of Blanes (CEAB-CSIC), which is coordinating the Mosquito Alert project. The data will be used to learn more about the spread of tiger and yellow fever mosquitoes and may be shared with third parties or the public. Mosquito Alert also collects coarse information on your location at random times throughout the day in order to generate a map of the areas being monitored by Mosquito Alert users, and to learn about the routes along which tiger and yellow fever mosquitoes may be spreading. These locations are masked by rounding your actual location to the nearest 0.05 degrees latitude and longitude, making it possible to know that you were in an area roughly the size of a small city like Blanes, but impossible to know where you were in that area. The locations are linked only to your randomly-generated user ID, and no personally-identifying information is collected. Parts of the data you share will be automatically published on the web map at <a href="http://mosquitoalert.com">mosquitoalert.com</a>. At any time you can delete, edit and update the data published on this map from your phone by clicking the "MY MAP" button on the main screen and selecting a report.
 
 <h1>ADDITIONAL QUESTIONS</h1>
 Check the website or contact <a href="mailto:info@mosquitoalert.com">info@mosquitoalert.com</a> for more information.
