--- a/tigahelp/templates/tigahelp/about_ca.html
+++ b/tigahelp/templates/tigahelp/about_ca.html
@@ -1,35 +1,35 @@
-{% extends "tigahelp/base.html" %}
+﻿{% extends "tigahelp/base.html" %}
 {% load staticfiles %}
 
 {% block page_title %}
-    Sobre Mosquito Alert
+    Sobre Tigatrapp
 {% endblock %}
 
 
 {% block content %}
 
     <div class="center">
-        <h1>Sobre Mosquito Alert</h1>
+        <h1>Sobre Tigatrapp</h1>
     </div>
 
     <p>Aquest projecte és possible gràcies a la implicació creixent de moltes entitats públiques i privades, així com el suport de molts professionals.</p>
 
-<p>El projecte està coordinat per l'<a href="http://www.movelab.net">ICREA Movement Ecology Laboratory</a>, associat al <a href="http://www.ceab.csic.es">CEAB-CSIC</a> i al <a href="http://www.creaf.cat/">CREAF</a>.</p>
+<p>El projecte està coordinat per l'<a href="http://www.movelab.net">ICREA Movement Ecology Lab</a>, associat al <a href="http://www.ceab.csic.es">Centre d'Estudis Avançats de Blanes</a> del <a href="http://www.csic.es">Consell Superior d'Investigacions Científiques</a> i al Centre de Recerca Ecològica i Aplicacions Forestals (CREAF).</p>
 
 <p>El projecte ha estat impulsat per la Fundació Bancaria “la Caixa”.</p>
 
    <p class='centeredImage'>
-    <img style='max-width: 100%; height: auto;' src={% static "tigahelp/lacaixa.jpg" %}>
+        <a href='/credits/'><img style='max-width: 100%; height: auto;' src
+                ={% static "tigahelp/lacaixa.jpg" %}></a>
     </p>
 
 
-<p>El projecte està cofinançat per L’Organisme Autònom de Salut Pública de la Diputació de Girona (Dipsalut), el Ministeri d’Economia i Competitivitat, la Fundació Espanyola per a la Ciència i la Tecnologia (FECYT) i l’empresa lokímica.</p>
-
-<p>Part de les fotografies de l’app Mosquito Alert han estat cedides per <a href="http://www.eritja.com">R. Eritja</a>.</p>
+<p>El projecte està cofinançat per L’Organisme Autònom de Salut Pública de la Diputació de Girona (Dipsalut), el Ministeri d’Economia i Competitivitat, la Fundació Espanyola per a la Ciència i la Tecnologia (FECYT) i l’empresa lokímica.
+Part de les fotografies de l’app Mosquito Alert han estat cedides per <a href="http://www.eritja.com">R. Eritja</a>. </p>
 
     <p class='centeredImage'>
         <a href='/credits/'><img style='max-width: 100%; height: auto;' src
-                ={% static "tigahelp/credits_logos_2016.jpg" %}></a>
+                ={% static "tigahelp/credits_logos_2015.jpg" %}></a>
     </p>
 
 {% endblock %}
