--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -307,7 +307,19 @@
 
 
                 {% if pending == 'pending' or checked == 'unchecked' or edit_mode == 'edit' %}
-                    `
+
+                    <strong>Aedes certainty:</strong><br>
+                    <select id="aedes_certainty_value_{{ form.instance.id }}">
+                        <option value="">--------------</option>
+                        <option value="4">Definitely Aedes aegypti</option>
+                        <option value="3">Probably Aedes aegypti</option>
+                        <option value="2">Definitely Aedes albopictus</option>
+                        <option value="1">Probably Aedes albopictus</option>
+                        <option value="0">Not sure</option>
+                        <option value="-1">Probably neither albopictus nor aegypti</option>
+                        <option value="-2">Definitely not albopictus or aegypti</option>
+                    </select>
+
                     {% form form using "floppyforms/layouts/bootstrap.html" %}
 
                     {% if checked == 'unchecked' or edit_mode == 'edit' %}
@@ -881,7 +893,104 @@
         })();
     </script>
 
+    <script>
 
+        var index_to_id = {};
+        var id_to_index = {};
+
+        function aedesValueToInput(value, input_id){
+            if(value == '4'){
+                setTigerCertainty("-2", input_id);
+                setAegyptiCertainty("2", input_id);
+            }else if(value == '3'){
+                setTigerCertainty("-1", input_id);
+                setAegyptiCertainty("1", input_id);
+            }else if(value == '2'){
+                setTigerCertainty("2", input_id);
+                setAegyptiCertainty("-2", input_id);
+            }else if(value == '1'){
+                setTigerCertainty("1", input_id);
+                setAegyptiCertainty("-1", input_id);
+            }else if(value == '0'){
+                setTigerCertainty("0", input_id);
+                setAegyptiCertainty("0", input_id);
+            }else if(value == '-1'){
+                setTigerCertainty("-1", input_id);
+                setAegyptiCertainty("-1", input_id);
+            }else if(value == '-2'){
+                setTigerCertainty("-2", input_id);
+                setAegyptiCertainty("-2", input_id);
+            }
+        }
+
+        function inputToAedesValue(input_id){
+            var i = 0;
+            var tiger_val = getTigerCertainty(input_id);
+            var aegypti_val = getAegyptiCertainty(input_id);
+            if( tiger_val == '-2' && aegypti_val == '2' ){
+                //setDropDown "4"
+                $("#aedes_certainty_value_" + input_id).val('4');
+            }else if( tiger_val == '-1' && aegypti_val == '1'){
+                //setDropDown "3"
+                $("#aedes_certainty_value_" + input_id).val('3');
+            }else if( tiger_val == '2' && aegypti_val == '-2'){
+                //setDropDown "2"
+                $("#aedes_certainty_value_" + input_id).val('2');
+            }else if( tiger_val == '1' && aegypti_val == '-1' ){
+                //setDropDown "1"
+                $("#aedes_certainty_value_" + input_id).val('1');
+            }else if( tiger_val == '0' && aegypti_val == '0'){
+                //setDropDown "0"
+                $("#aedes_certainty_value_" + input_id).val('0');
+            }else if( tiger_val == '-1' && aegypti_val == '-1'){
+                //setDropDown "-1"
+                $("#aedes_certainty_value_" + input_id).val('-1');
+            }else if( tiger_val == '-2' && aegypti_val == '-2'){
+                $("#aedes_certainty_value_" + input_id).val('-2');
+            }else{
+                $("#aedes_certainty_value_" + input_id).val('');
+            }
+        }
+
+        function setTigerCertainty(value,input_id){
+            var control_name = "id_form-" + id_to_index[input_id] + "-tiger_certainty_category";
+            $('#'+control_name).val(value);
+        }
+
+        function setAegyptiCertainty(value,input_id){
+            var control_name = "id_form-" + id_to_index[input_id] + "-aegypti_certainty_category";
+            $('#'+control_name).val(value);
+        }
+
+        function getTigerCertainty(input_id){
+            var control_name = "id_form-" + id_to_index[input_id] + "-tiger_certainty_category";
+            var retVal = $('#'+control_name).val();
+            return retVal;
+        }
+
+        function getAegyptiCertainty(input_id){
+            var control_name = "id_form-" + id_to_index[input_id] + "-aegypti_certainty_category";
+            var retVal = $('#'+control_name).val();
+            return retVal;
+        }
+
+        $( document ).ready(function() {
+            //$("#aedes_certainty_value_{{ form.instance.id }}").val('{{form.instance.tiger_certainty_category}}');
+            var total_forms = $("#id_form-TOTAL_FORMS").val();
+            index_to_id = {};
+            id_to_index = {};
+            for( var i = 0; i < total_forms; i++){
+                index_to_id[i] = $("#id_form-" + i + "-id").val();
+                id_to_index[$("#id_form-" + i + "-id").val()] = i;
+            }
+            {% for form in formset %}
+                inputToAedesValue('{{ form.instance.id }}');
+                $("#aedes_certainty_value_{{ form.instance.id }}").change(function(){
+                    aedesValueToInput($(this).val(),'{{ form.instance.id }}');
+                });
+            {% endfor %}
+        });
+    </script>
 
     <script>
 
