--- a/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
@@ -94,9 +94,10 @@
         <div class="col-md-12">
             <a role="button" data-toggle="collapse" href="#current_status_collapse{{ form.instance.id }}"
                aria-expanded="false" aria-controls="current_status_collapse{{ form.instance.id }}"><i
-                    class="fa fa-plus-square-o"></i></a> <strong>Current
-            Status:</strong> {{ form.instance.report.get_final_expert_status_bootstrap | safe }} {% include "tigacrafting/score_label.html" with score=form.instance.report.get_final_expert_score text=form.instance.report.get_final_expert_category %}
-
+                    class="fa fa-plus-square-o"></i></a>
+            {{ form.instance.report.get_final_expert_status_bootstrap | safe }}
+            <strong>Current Status <i>Albopictus</i>:</strong>  {% include "tigacrafting/score_label.html" with score=form.instance.report.get_final_expert_score text=form.instance.report.get_final_expert_category %}
+            <strong>Current Status <i>Aegypti</i>:</strong> {% include "tigacrafting/score_label.html" with score=form.instance.report.get_final_expert_score_aegypti text=form.instance.report.get_final_expert_category_aegypti %}
 
             <div class="collapse" id="current_status_collapse{{ form.instance.id }}">
                 <div class="well">
