--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -307,18 +307,21 @@
 
 
                 {% if pending == 'pending' or checked == 'unchecked' or edit_mode == 'edit' %}
-
-                    <strong>Aedes certainty:</strong><br>
-                    <select id="aedes_certainty_value_{{ form.instance.id }}">
-                        <option value="">--------------</option>
-                        <option value="4">Definitely Aedes aegypti</option>
-                        <option value="3">Probably Aedes aegypti</option>
-                        <option value="2">Definitely Aedes albopictus</option>
-                        <option value="1">Probably Aedes albopictus</option>
-                        <option value="0">Not sure</option>
-                        <option value="-1">Probably neither albopictus nor aegypti</option>
-                        <option value="-2">Definitely not albopictus or aegypti</option>
-                    </select>
+                    <div class="form-group">
+                        <div>
+                            <strong>Aedes certainty:</strong><br>
+                            <select id="aedes_certainty_value_{{ form.instance.id }}">
+                                <option value="">--------------</option>
+                                <option value="4">Definitely Aedes aegypti</option>
+                                <option value="3">Probably Aedes aegypti</option>
+                                <option value="2">Definitely Aedes albopictus</option>
+                                <option value="1">Probably Aedes albopictus</option>
+                                <option value="0">Not sure</option>
+                                <option value="-1">Probably neither albopictus nor aegypti</option>
+                                <option value="-2">Definitely not albopictus or aegypti</option>
+                            </select>
+                        </div>
+                    </div>
 
                     {% form form using "floppyforms/layouts/bootstrap.html" %}
 
@@ -352,19 +355,25 @@
 
                         {% else %}
 
-                    {% if form.instance.report.type == 'adult' %}
-                        {% if request.user.userstat.is_superexpert %}
-                            <strong>Aegypti Certainty:</strong><br>
-                            <div style="border:1px solid #333333;padding:2px;">
-                            {% if form.instance.get_aegypti_certainty_category_display %}
-                                {{ form.instance.get_aegypti_certainty_category_display }}{% else %}---{% endif %}</div>
-                            <br>
-                        {% endif %}
-                        <strong>Tiger Certainty:</strong><br>
+                    {% if form.instance.report.type == 'adult' %}                 
+                        <strong>Aedes Certainty:</strong><br>
                         <div style="border:1px solid #333333;padding:2px;">
-                            {% if form.instance.get_tiger_certainty_category_display %}
-                                {{ form.instance.get_tiger_certainty_category_display }}{% else %}---{% endif %}</div>
-                        <br>
+                            {% if form.instance.tiger_certainty_category == -2 and form.instance.aegypti_certainty_category == 2 %}
+                                {{ form.instance.get_aegypti_certainty_category_display }}
+                            {% elif form.instance.tiger_certainty_category == -1 and form.instance.aegypti_certainty_category == 1 %}
+                                {{ form.instance.get_aegypti_certainty_category_display }}
+                            {% elif form.instance.tiger_certainty_category == 2 and form.instance.aegypti_certainty_category == -2 %}
+                                {{ form.instance.get_tiger_certainty_category_display }}
+                            {% elif form.instance.tiger_certainty_category == 1 and form.instance.aegypti_certainty_category == -1 %}
+                                {{ form.instance.get_tiger_certainty_category_display }}
+                            {% elif form.instance.tiger_certainty_category == 0 and form.instance.aegypti_certainty_category == 0 %}
+                                {{ form.instance.get_tiger_certainty_category_display }}
+                            {% elif form.instance.tiger_certainty_category == -1 and form.instance.aegypti_certainty_category == -1 %}
+                                {{ form.instance.get_tiger_certainty_category_display }}
+                            {% elif form.instance.tiger_certainty_category == -2 and form.instance.aegypti_certainty_category == -2 %}
+                                {{ form.instance.get_tiger_certainty_category_display }}
+                            {% endif %}
+                        </div>
                         <strong>Internal Tiger Certainty Comments:</strong><br>
                         <div style="overflow: auto;height: 150px;border:1px solid #333333;padding:2px;">
                             {{ form.instance.tiger_certainty_notes }}</div><br>
@@ -521,7 +530,8 @@
 
                 var this_id = "{{ form.instance.id }}";
 
-                var hidden_form_fields{{ form.instance.id }} = $("#{{ form.edited_user_notes.auto_id }}, #" + "{{ form.message_for_user.auto_id }}, #" + "{{ form.linked_id.auto_id }}, #" + "{{ form.status.auto_id }}, #" + "{{ form.site_certainty_notes.auto_id }}, #" + "{{ form.site_certainty_category.auto_id }}, #" + "{{ form.tiger_certainty_notes.auto_id }}, #" + "{{ form.tiger_certainty_category.auto_id }}, #" + "{{ form.aegypti_certainty_category.auto_id }}, #" + validation_complete_id_{{ form.instance.id }});
+                //var hidden_form_fields{{ form.instance.id }} = $("#{{ form.edited_user_notes.auto_id }}, #" + "{{ form.message_for_user.auto_id }}, #" + "{{ form.linked_id.auto_id }}, #" + "{{ form.status.auto_id }}, #" + "{{ form.site_certainty_notes.auto_id }}, #" + "{{ form.site_certainty_category.auto_id }}, #" + "{{ form.tiger_certainty_notes.auto_id }}, #" + "{{ form.tiger_certainty_category.auto_id }}, #" + "{{ form.aegypti_certainty_category.auto_id }}, #" + validation_complete_id_{{ form.instance.id }});
+                var hidden_form_fields{{ form.instance.id }} = $("#{{ form.edited_user_notes.auto_id }}, #" + "{{ form.message_for_user.auto_id }}, #" + "{{ form.linked_id.auto_id }}, #" + "{{ form.status.auto_id }}, #" + "{{ form.site_certainty_notes.auto_id }}, #" + "{{ form.site_certainty_category.auto_id }}, #" + "{{ form.tiger_certainty_notes.auto_id }}, #" + "aedes_certainty_value_{{ form.instance.id }}, #" + validation_complete_id_{{ form.instance.id }});
 
                 var hidden_photo_fields{{ form.instance.id }} = $("#div_for_photo_to_display_report_" + "{{ form.instance.report.version_UUID }}," + "#clear_button_" + "{{ form.instance.id }}");
 
