--- a/tigamap/templates/tigamap/validated_report_map_filterable.html
+++ b/tigamap/templates/tigamap/validated_report_map_filterable.html
@@ -394,6 +394,17 @@ function get_icon(report) {
     var score = -3;
     if (report.type == 'adult') {
         if (report.movelab_annotation != null) {
+            /*if (report.movelab_annotation.tiger_certainty_category != null && report.movelab_annotation.tiger_certainty_category != null){
+                tiger_score = report.movelab_annotation.tiger_certainty_category;
+                aegypti_score = report.movelab_annotation.aegypti_certainty_category;
+                if(tiger_score <= 0 && aegypti_score <= 0){
+                    return score == -1 ? yellow_grey_icon : (score == -2 ? yellow_black_icon : (score == 0 ? yellow_white_icon : yellow_yellow_icon));
+                }else if( tiger_score > 0 ){
+                    return tiger_score == 2 ? yellow_red_icon : ( tiger_score == 1 ? yellow_orange_icon );
+                }else if( aegypti_score > 0 ){
+                    return aegypti_score == 2 ? blue_red_icon : ( aegypti_score == 1 ? blue_orange_icon );
+                }
+            }*/
             if (report.movelab_annotation.aegypti_certainty_category && report.movelab_annotation.aegypti_certainty_category != null){
                 score = report.movelab_annotation.aegypti_certainty_category;
                 if(score == 2){
