--- a/tigahelp/templates/tigahelp/privacy_es.html
+++ b/tigahelp/templates/tigahelp/privacy_es.html
@@ -1,5 +1,5 @@
 ﻿{% extends "tigahelp/base.html" %}
-{% load staticfiles %}
+{% load static from staticfiles %}
 
 {% block page_title %}
     Política de privacidad
