--- a/tigacrafting/templates/tigacrafting/expert_status.html
+++ b/tigacrafting/templates/tigacrafting/expert_status.html
@@ -1,5 +1,5 @@
 {% extends "tigacrafting/expert_report_status.html" %}
-{% load staticfiles %}
+{% load static from staticfiles %}
 {% load i18n %}
 
 
