--- a/tigahelp/templates/tigahelp/terms_ca.html
+++ b/tigahelp/templates/tigahelp/terms_ca.html
@@ -1,5 +1,5 @@
 ﻿{% extends "tigahelp/base.html" %}
-{% load staticfiles %}
+{% load static from staticfiles %}
 
 {% block page_title %}
     Acord de l'usuari
