--- a/tigamap/templates/tigamap/app.html
+++ b/tigamap/templates/tigamap/app.html
@@ -1,6 +1,6 @@
 {% extends "tigamap/base.html" %}
 {% load i18n %}
-{% load staticfiles %}
+{% load static from staticfiles %}
 
 {% block head_additions %}
 
