--- a/tigamap/templates/tigamap/embedded.html
+++ b/tigamap/templates/tigamap/embedded.html
@@ -1,6 +1,6 @@
 {% extends "tigamap/base.html" %}
 {% load i18n %}
-{% load staticfiles %}
+{% load static from staticfiles %}
 {% load leaflet_tags %}
 
 
