--- a/tigamap/templates/tigamap/embedded_new_no_legend.html
+++ b/tigamap/templates/tigamap/embedded_new_no_legend.html
@@ -1,5 +1,5 @@
 {% extends "tigamap/embedded_new_legend.html" %}
-{% load staticfiles %}
+{% load static from staticfiles %}
 {% load i18n %}
 {% load leaflet_tags %}
 
