--- a/tigamap/templates/tigamap/form_base.html
+++ b/tigamap/templates/tigamap/form_base.html
@@ -1,6 +1,6 @@
 {# NOTE THIS IS JUST THE START - I AM PUTTING THIS OFF FOR THE MOMENT #}
 {% extends "tigamap/app.html" %}
-{% load staticfiles %}
+{% load static from staticfiles %}
 
 {% block bootstrap_css %}
     {{ block.super }}
