--- a/tigamap/templates/tigamap/oe_map.html
+++ b/tigamap/templates/tigamap/oe_map.html
@@ -1,5 +1,5 @@
 {% extends "tigamap/app.html" %}
-{% load staticfiles %}
+{% load static from staticfiles %}
 {% load i18n %}
 {% load leaflet_tags %}
 
