Fixed login template

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,9 +1,10 @@
+{% load static from staticfiles %}
 <!DOCTYPE html>
 <head>
 <title>Movelab Login</title>
-<link rel="stylesheet" type="text/css" href="/static/admin/css/base.css" />
-<link rel="stylesheet" type="text/css" href="/static/admin/css/login.css" />
-<!--[if lte IE 7]><link rel="stylesheet" type="text/css" href="/static/admin/css/ie.css" /><![endif]-->
+<link rel="stylesheet" type="text/css" href="{% static "admin/css/base.css" %}" />
+<link rel="stylesheet" type="text/css" href="{% static "admin/css/login.css" %}" />
+<!--[if lte IE 7]><link rel="stylesheet" type="text/css" href="{% static "admin/css/ie.css" %}" /><![endif]-->
 
 <script type="text/javascript">window.__admin_media_prefix__ = "/static/admin/";</script>
 
